tests/rosetta/transpiler/FS/2048.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/2048.fs(67,11): error FS1129: The type 'unit' does not contain a field 'board'

/workspace/mochi/tests/rosetta/transpiler/FS/2048.fs(104,38): error FS0001: The type 'SpawnResult' is not compatible with the type 'seq<'a>'

/workspace/mochi/tests/rosetta/transpiler/FS/2048.fs(106,35): error FS0039: The field, constructor or member 'Item' is not defined

/workspace/mochi/tests/rosetta/transpiler/FS/2048.fs(113,13): error FS0752: The operator 'expr.[idx]' has been used on an object of indeterminate type based on information prior to this program point. Consider adding further type constraints

/workspace/mochi/tests/rosetta/transpiler/FS/2048.fs(114,37): error FS0752: The operator 'expr.[idx]' has been used on an object of indeterminate type based on information prior to this program point. Consider adding further type constraints

/workspace/mochi/tests/rosetta/transpiler/FS/2048.fs(138,9): error FS0027: This value is not mutable

/workspace/mochi/tests/rosetta/transpiler/FS/2048.fs(152,39): error FS0001: This expression was expected to have type
    SpawnResult    
but here has type
    int array    

/workspace/mochi/tests/rosetta/transpiler/FS/2048.fs(155,9): error FS0027: This value is not mutable

/workspace/mochi/tests/rosetta/transpiler/FS/2048.fs(156,27): error FS0001: This expression was expected to have type
    SpawnResult    
but here has type
    int []    

/workspace/mochi/tests/rosetta/transpiler/FS/2048.fs(177,20): error FS0752: The operator 'expr.[idx]' has been used on an object of indeterminate type based on information prior to this program point. Consider adding further type constraints

/workspace/mochi/tests/rosetta/transpiler/FS/2048.fs(189,9): error FS0027: This value is not mutable

/workspace/mochi/tests/rosetta/transpiler/FS/2048.fs(203,39): error FS0001: This expression was expected to have type
    SpawnResult    
but here has type
    int []    

/workspace/mochi/tests/rosetta/transpiler/FS/2048.fs(206,9): error FS0027: This value is not mutable

/workspace/mochi/tests/rosetta/transpiler/FS/2048.fs(207,27): error FS0001: This expression was expected to have type
    SpawnResult    
but here has type
    int []    

/workspace/mochi/tests/rosetta/transpiler/FS/2048.fs(222,17): error FS0001: This expression was expected to have type
    unit    
but here has type
    bool    

/workspace/mochi/tests/rosetta/transpiler/FS/2048.fs(224,17): error FS0001: This expression was expected to have type
    unit    
but here has type
    bool    

/workspace/mochi/tests/rosetta/transpiler/FS/2048.fs(226,17): error FS0001: This expression was expected to have type
    unit    
but here has type
    bool    

/workspace/mochi/tests/rosetta/transpiler/FS/2048.fs(236,17): error FS0001: This expression was expected to have type
    unit    
but here has type
    bool    

/workspace/mochi/tests/rosetta/transpiler/FS/2048.fs(252,19): error FS0039: The value or constructor 'input' is not defined
